crates/rargs/tests/snapshots/test_scripts__stderr whitelist.sh america.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stderr] whitelist.sh america"
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mInvalid option for [33mregion[31m: [33mamerica[31m[0m

Sample showing the use of arg and option whitelist (allowed values)

[4mUsage:[0m
  whitelist -u|--user <USER> [OPTIONS] REGION [ENVIRONMENT] 
  whitelist -h|--help
  whitelist -v|--version

[4mArguments:[0m
  REGION
    Region to connect to
    [@required, @choices eu|us]
  ENVIRONMENT
    Environment to connect to
    [@default development, @choices development|staging|production]

[4mOptions:[0m
  -p --protocol [<PROTOCOL>]
    Protocol to connect with
    [@default ssh, @choices ssh|ftp|http]
  -u --user <USER>
    User name
    [@choices user|admin]
  -h --help
    Print help
  -v --version
    Print version
