crates/rargs/tests/snapshots/test_scripts__stdout catch-all-global.sh -h.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] catch-all-global.sh -h"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Catch All global example

[4mUsage:[0m
  catch-all-global [OPTIONS] [COMMAND] [COMMAND_OPTIONS] ...GLOBAL_REQUIRED_ADDITIONAL_ARGUMENTS
  catch-all-global -h|--help
  catch-all-global -v|--version

[4mArguments:[0m
  GLOBAL_REQUIRED_ADDITIONAL_ARGUMENTS
    Required additional arguments

[4mCommands:[0m
  multiple ....... With a multiple required argument
  no-multiple .... Command with a simple optional argument
  other .......... Any arguments without description

[4mOptions:[0m
  -d --debug
    Debug mode
  -h --help
    Print help
  -v --version
    Print version

